# FallModel_23-24

./: .clang-format  .gitignore  CMakeLists.txt  README  debug  fall_model.py  main.cpp  main.py  makefile  my_model.py  res.csv  simulation.py  solve.py  test.py  test2.csv
.cache/clangd/index/: BallisticModel.cpp.8765B5C46B57040A.idx  BallisticModel.h.71BB585191E3B93B.idx  Model.h.24104FED7A04A66B.idx  PayChute.h.7235E750F4E92D58.idx  Real3.h.B6C4943E76D2A46C.idx  Settings.h.D95F923722B2E051.idx  Simulation.cpp.E82415431B308946.idx  Simulation.h.927D1C6A7BCE912B.idx  State.h.0FD372558EB90E98.idx  Waypoint.cpp.7FE62D72028C90C7.idx  Waypoint.h.CAF5FB642DC45F37.idx  Wind.h.B6EF08C51F6C523F.idx  bridge.cpp.104609E0D88713BC.idx  pch.h.9890CE6621763B65.idx
db/: README
db/source/: Simulation.cpp  run.cpp
inc/: Model.h  PayChute.h  Real3.h  Settings.h  Simulation.h  State.h  Wind.h  pch.h
include/: BallisticModel.h  BaseStepper.h  Force.h  Model.h  PayChute.h  Real.h  Real3.h  Settings.h  Simulation.h  State.h  VReal.h  Waypoint.h  Wind.h  pch.h
source/: Simulation.cpp
src/: BallisticModel.cpp  Simulation.cpp  Waypoint.cpp  bridge.cpp  main.cpp
